--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1149,17 +1149,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6a7c0346-7a39-4698-b706-187402a31f6e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/voronoi_cell.py:94: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'{{matrix{{0, 1}, {-1, 0}},matrix{{1, 0}, {1, 1}},matrix{{1, 1}, {1, 0}}},{matrix{{0, 1}, {-1, 0}},matrix{\\n {0, -1}, {1, 0}},matrix{{1, 0}, {1, 1}}},{matrix{{0, 1}, {-1, 0}},matrix{{-1, -1}, {-1, 0}},matrix{{\\n 0, -1}, {-1, -1}}},{matrix{{0, 1}, {-1, 0}},matrix{{-1, -1}, {-1, 0}},matrix{{0, -1}, {1, 0}}}}'"
+       "'{{matrix{{1, 0}, {1, 1}},matrix{{0, -1}, {-1, -1}},matrix{{0, 1}, {-1, 0}}},{matrix{{1, 0}, {1, 1}},\\n matrix{{0, 1}, {-1, 0}},matrix{{1, 1}, {1, 0}}},{matrix{{1, 0}, {1, 1}},matrix{{-1, -1}, {-1, 0}},matrix{\\n {0, -1}, {-1, -1}}},{matrix{{1, 0}, {1, 1}},matrix{{-1, -1}, {-1, 0}},matrix{{0, -1}, {1, 0}}}}'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
