add verbose option

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1181,173 +1181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "1cd93677-3c82-48fd-9405-1e44add3ef22",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Debug 2: m2_input_string = --compute Q norms\n",
-      "qnorm = (v, Q)-> (\n",
-      "    return transpose(v)*Q*v\n",
-      ");\n",
-      "\n",
-      "qnormmat = (B, Q, d) ->(\n",
-      "    return transpose( matrix{for i from 0 to d-1 list qnorm(matrix B_i, Q)})\n",
-      ");\n",
-      "\n",
-      "\n",
-      "--compute inverse of dxd matrix\n",
-      "invCofactor = (A, d) ->(\n",
-      "    de = det A;\n",
-      "    mins = reverse (entries gens minors(d-1,A))_0; -- minors transpose\n",
-      "    answer = for i from 0 to d-1 list( for j from 0 to d-1 list mins_(j+d*i)*(-1)^(i+j)/de);\n",
-      "    return matrix(answer)\n",
-      ");\n",
-      "\n",
-      "--compute vertices\n",
-      "vertex = (B, Q, d)->(\n",
-      "    return 1/2*invCofactor(Q, d)*inverse(transpose(B))*qnormmat(B, Q, d)\n",
-      ");\n",
-      "\n",
-      "--barycenter of vectors which are columns of L\n",
-      "bary = (L, d)->(\n",
-      "    1/(d+1)*transpose(matrix{for i from 0 to d-1 list sum((entries(transpose(L))_i))})\n",
-      ");\n",
-      "\n",
-      "--create ring for symmetric matrix variables\n",
-      "symMatricesRing = (d) -> (\n",
-      "    R = QQ[x_(1, 1)..x_(d, d)];\n",
-      "    I = ideal();\n",
-      "    for i from 1 to d do(\n",
-      "        for j from i+1 to d do(\n",
-      "            I = I+ideal(x_(i, j)-x_(j, i))\n",
-      "        );\n",
-      "    );\n",
-      "    return R/I\n",
-      ");\n",
-      "\n",
-      "--helper function\n",
-      "isSame = (i, j) ->(\n",
-      "    if i === j then return 1\n",
-      "    else return 0\n",
-      ");\n",
-      "\n",
-      "--voronoi cell is a generic d-dim permutohedron\n",
-      "favouriteMatrix = (d) -> (\n",
-      "    ans = mutableMatrix map(QQ^d,QQ^d,(i,j)->isSame(i, j)*(d+1) - 1);\n",
-      "    for i from 0 to d-1 do(\n",
-      "        for j from 0 to d-1 do(\n",
-      "            ans_(i, j) = -1\n",
-      "        );\n",
-      "    );\n",
-      "    for i from 0 to d-1 do(\n",
-      "        ans_(i, i) = d\n",
-      "    );\n",
-      "    return matrix ans\n",
-      ");\n",
-      "\n",
-      "--listifying favorite matrix\n",
-      "Listify = (d) -> (\n",
-      "    lvalues = {};\n",
-      "    for i from 0 to d-1 do(\n",
-      "        for j from i to d-1 do(\n",
-      "            if i === j then lvalues = append(lvalues, d)\n",
-      "            else lvalues = append(lvalues, -1);\n",
-      "        );\n",
-      "    );\n",
-      "    return lvalues\n",
-      ");\n",
-      "\n",
-      "\n",
-      "\n",
-      "-- it takes a polynomial, a list of values, and flips the sign of the polynomial if \n",
-      "-- in the evaluation in these values it is negative\n",
-      "makepos = (polynom, lvalues, d, RingR) -> (\n",
-      "    G = d*(d+1)//2;\n",
-      "    slst = {};\n",
-      "    genList = gens RingR;\n",
-      "    for i from 0 to G-1 do (\n",
-      "        slst = append(slst, genList_i => lvalues_i); \n",
-      "    );\n",
-      "    subvalue1 = sub(numerator polynom, slst);\n",
-      "    subvalue2 = sub(denominator polynom, slst);\n",
-      "    subvalue = subvalue1/subvalue2;\n",
-      "    if subvalue < 0 then return -polynom\n",
-      "    else return polynom\n",
-      ");\n",
-      "\n",
-      "--compute second moment of simplex given by d+1 vertices as columns of L\n",
-      "-- actual second moment is also divided by dth root(det(Q))\n",
-      "-- make sure L has a fraction so we're in the right field\n",
-      "sm = (L, d, Q)->(\n",
-      "    T = submatrix'(L-matrix(for i from 0 to d list (L)_0),,{0});\n",
-      "    lis =  for i from 0 to d list qnorm(matrix(L_i), Q);\n",
-      "    return (det(T)*(qnorm((d+1)*bary(L, d), Q)+sum(lis))*(1/(d+2)!))_0_0\n",
-      ");\n",
-      "\n",
-      "--output is a list of vertices of a triangle suitable for input to sm function\n",
-      "--listMatrices is a list of matrices, each of which is a B matrix for a vertex\n",
-      "VectorizedVertex = (listMatrices, Q, d) -> ( \n",
-      "    concatVertices = vertex(listMatrices_0, Q, d);\n",
-      "    for j from 1 to d do(\n",
-      "        concatVertices = concatVertices | vertex(listMatrices_j, Q, d);\n",
-      "    );\n",
-      "    return concatVertices\n",
-      ");\n",
-      "\n",
-      "-- Takes a dimension d and matVertices structure\n",
-      "-- matVertices encodes a triangulation of the voronoi cell\n",
-      "-- matvertices is a matrix, where each row corresponds to a triangle\n",
-      "-- in each row an entry corresponds to a vertex of the triangle\n",
-      "-- a vertex is encoded by a matrix\n",
-      "-- output is the rational function giving the second moment for any Voronoi cell in \n",
-      "-- the same chamber as our favorite matrix in terms of the entries of the matrix Q\n",
-      "SmPoly = (d, matVertices) -> (\n",
-      "    A = favouriteMatrix(d);\n",
-      "    G = d*(d+1)//2;\n",
-      "    R = QQ[q_0..q_(G-1)];\n",
-      "    Q = genericSymmetricMatrix(R, q_0, d);\n",
-      "    Zpoly = 0;\n",
-      "    l = # matVertices;\n",
-      "    for i from 0 to l-1 do(\n",
-      "        -- print(concatenate(toString i, \" of total \", toString l, \" - new loop\"));\n",
-      "        concatVertices = VectorizedVertex(matVertices_i, Q, d);\n",
-      "        -- print(concatenate(toString i, \" of total \", toString l, \" - loop compute sm\"));\n",
-      "        ply = sm(concatVertices, d, Q);\n",
-      "        lvalues = Listify(d);\n",
-      "        newPolyTriangle = makepos(ply, lvalues, d, R);\n",
-      "        -- print(concatenate(toString i, \" of total \", toString l, \" - loop add \"));\n",
-      "        Zpoly = Zpoly + newPolyTriangle;\n",
-      "    );\n",
-      "    return Zpoly\n",
-      ");\n",
-      "\n",
-      "mat = {{matrix{{1, 1}, {1, 0}},matrix{{0, -1}, {-1, -1}},matrix{{0, 1}, {-1, 0}}},{matrix{{1, 1}, {1, 0}}, matrix{{0, -1}, {1, 0}},matrix{{1, 0}, {1, 1}}},{matrix{{1, 1}, {1, 0}},matrix{{-1, -1}, {-1, 0}},matrix{ {0, -1}, {-1, -1}}},{matrix{{1, 1}, {1, 0}},matrix{{-1, -1}, {-1, 0}},matrix{{0, -1}, {1, 0}}}};\n",
-      "d = rank source  (mat_0)_0;\n",
-      "Zpoly = SmPoly(d, mat);\n",
-      "toString Zpoly\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py:11: DeprecationWarning: read_text is deprecated. Use files() instead. Refer to https://importlib-resources.readthedocs.io/en/latest/using.html#migrating-from-legacy for migration advice.\n",
-      "  template_content = importlib.resources.read_text(\n",
-      "/home/penegas/sage/local/var/lib/sage/venv-python3.12.5/lib/python3.12/importlib/resources/_legacy.py:79: DeprecationWarning: open_text is deprecated. Use files() instead. Refer to https://importlib-resources.readthedocs.io/en/latest/using.html#migrating-from-legacy for migration advice.\n",
-      "  with open_text(package, resource, encoding, errors) as fp:\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'(2*q_0*q_1^2+2*q_1^3-q_0^2*q_2+2*q_1^2*q_2-q_0*q_2^2)/(12*q_1^2-12*q_0*q_2)'"
+       "'(-2*q_0^3*q_1*q_2+6*q_0^2*q_1^2*q_2-4*q_0*q_1^3*q_2+q_0^3*q_2^2-5*q_0^2*q_1*q_2^2+4*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,9 +1199,18 @@
    "source": [
     "from VoronoiCellToolBox.orchestration import chamberSecondMomentPolynomial\n",
     "\n",
-    "Q = [[2, -1], [-1, 2]]\n",
-    "chamberSecondMomentPolynomial(Q)"
+    "Q = [[2, -1/2], [-1/2, 2]]\n",
+    "Q = [[2, 1], [1, 2]]\n",
+    "chamberSecondMomentPolynomial(Q, verbose = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51f3519a-8650-43f3-b974-16d2196c62bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
