--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1181,27 +1181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "1cd93677-3c82-48fd-9405-1e44add3ef22",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'(-2*q_0^3*q_1*q_2+6*q_0^2*q_1^2*q_2-4*q_0*q_1^3*q_2+q_0^3*q_2^2-5*q_0^2*q_1*q_2^2+4*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'chamberSecondMomentPolynomial' from 'VoronoiCellToolBox.orchestration' (/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mVoronoiCellToolBox\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01morchestration\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m chamberSecondMomentPolynomial\n\u001b[1;32m      3\u001b[0m Q \u001b[38;5;241m=\u001b[39m [[Integer(\u001b[38;5;241m2\u001b[39m), \u001b[38;5;241m-\u001b[39mInteger(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m/\u001b[39mInteger(\u001b[38;5;241m2\u001b[39m)], [\u001b[38;5;241m-\u001b[39mInteger(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m/\u001b[39mInteger(\u001b[38;5;241m2\u001b[39m), Integer(\u001b[38;5;241m2\u001b[39m)]]\n\u001b[1;32m      4\u001b[0m Q \u001b[38;5;241m=\u001b[39m [[Integer(\u001b[38;5;241m2\u001b[39m), Integer(\u001b[38;5;241m1\u001b[39m)], [Integer(\u001b[38;5;241m1\u001b[39m), Integer(\u001b[38;5;241m2\u001b[39m)]]\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'chamberSecondMomentPolynomial' from 'VoronoiCellToolBox.orchestration' (/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py)"
+     ]
     }
    ],
    "source": [
-    "from VoronoiCellToolBox.orchestration import chamberSecondMomentPolynomial\n",
+    "from VoronoiCellToolBox.orchestration import normalizedChamberSecondMomentPolynomial\n",
     "\n",
     "Q = [[2, -1/2], [-1/2, 2]]\n",
     "Q = [[2, 1], [1, 2]]\n",
-    "chamberSecondMomentPolynomial(Q, verbose = True)"
+    "normalizedChamberSecondMomentPolynomial(Q, verbose = True)"
    ]
   },
   {
