Updated to version 1.3.5

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "1cd93677-3c82-48fd-9405-1e44add3ef22",
    "metadata": {},
    "outputs": [
@@ -1835,7 +1835,7 @@
       "    return Zpoly\n",
       ");\n",
       "\n",
-      "    mat = {{matrix{{0, -1}, {1, 1}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {1, 1}} ,matrix{{0, 1}, {1, 0}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {1, 1}},matrix{{0, -1}, {-1, 0}},matrix{ {1, 0}, {-1, -1}}},{matrix{{0, -1}, {1, 1}},matrix{{-1, -1}, {1, 0}},matrix{{0, -1}, {-1, 0}}}};\n",
+      "    mat = {{matrix{{0, -1}, {-1, 0}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {-1, 0} },matrix{{0, -1}, {1, 1}},matrix{{0, 1}, {1, 0}}},{matrix{{0, -1}, {-1, 0}},matrix{{-1, -1}, {1, 0}} ,matrix{{0, -1}, {1, 1}}},{matrix{{0, -1}, {-1, 0}},matrix{{0, 1}, {1, 0}},matrix{{1, 1}, {-1, 0}}}} ;\n",
       "    metric_matrix = matrix{{2, 1}, {1, 2}};\n",
       "    d = rank source  (mat_0)_0;\n",
       "    Zpoly = SmPoly(d, mat, metric_matrix, true);\n",
@@ -1846,10 +1846,10 @@
     {
      "data": {
       "text/plain": [
-       "'/tmp/tmpsv__qz82.input:200:22:(3):[6]: error: no method for binary operator - applied to objects:\\n--            d (of class Symbol)\\n--      -     1 (of class ZZ)\\n/tmp/tmpsv__qz82.input:208:16:(3):[5]: --back trace--'"
+       "'/tmp/tmpu5tem5c4.input:200:22:(3):[6]: error: no method for binary operator - applied to objects:\\n--            d (of class Symbol)\\n--      -     1 (of class ZZ)\\n/tmp/tmpu5tem5c4.input:208:16:(3):[5]: --back trace--'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
