--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1835,18 +1835,19 @@
       "    return Zpoly\n",
       ");\n",
       "\n",
-      "    mat = {{matrix{{0, -1}, {-1, 0}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {-1, 0} },matrix{{0, -1}, {1, 1}},matrix{{0, 1}, {1, 0}}},{matrix{{0, -1}, {-1, 0}},matrix{{-1, -1}, {1, 0}} ,matrix{{0, -1}, {1, 1}}},{matrix{{0, -1}, {-1, 0}},matrix{{0, 1}, {1, 0}},matrix{{1, 1}, {-1, 0}}}} ;\n",
-      "    metric_matrix = matrix{{2, 1}, {1, 2}};\n",
-      "    d = rank source  (mat_0)_0;\n",
-      "    Zpoly = SmPoly(d, mat, metric_matrix, true);\n",
-      "    toString Zpoly\n",
-      "    \n"
+      "mat = {{matrix{{0, -1}, {-1, 0}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {-1, 0} },matrix{{0, -1}, {1, 1}},matrix{{0, 1}, {1, 0}}},{matrix{{0, -1}, {-1, 0}},matrix{{-1, -1}, {1, 0}} ,matrix{{0, -1}, {1, 1}}},{matrix{{0, -1}, {-1, 0}},matrix{{0, 1}, {1, 0}},matrix{{1, 1}, {-1, 0}}}} ;\n",
+      "metric_matrix = matrix{{2, 1}, {1, 2}};\n",
+      "print(mat_0);\n",
+      "d = rank source  (mat_0)_0;\n",
+      "Zpoly = SmPoly(d, mat, metric_matrix, true);\n",
+      "toString Zpoly\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'/tmp/tmpu5tem5c4.input:200:22:(3):[6]: error: no method for binary operator - applied to objects:\\n--            d (of class Symbol)\\n--      -     1 (of class ZZ)\\n/tmp/tmpu5tem5c4.input:208:16:(3):[5]: --back trace--'"
+       "'/tmp/tmpwer1h33m.input:200:22:(3):[6]: error: no method for binary operator - applied to objects:\\n--            d (of class Symbol)\\n--      -     1 (of class ZZ)\\n/tmp/tmpwer1h33m.input:208:16:(3):[5]: --back trace--'"
       ]
      },
      "execution_count": 1,
