Updated to version 1.3.5

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1398,7 +1398,7 @@
       "    );\n",
       "    return lvalues\n",
       ");\n",
-      "print(toString Listify(2)); -- {2, -1, 2}\n",
+      "-- print(toString Listify(2)); -- {2, -1, 2}\n",
       "\n",
       "-- it takes a polynomial, a list of values, and flips the sign of the polynomial if \n",
       "-- in the evaluation in these values it is negative\n",
@@ -1512,13 +1512,20 @@
       "    );\n",
       "    return Zpoly\n",
       ");\n",
+      "\n",
+      "mat = {{matrix{{0, 1}, {1, 0}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, 1}, {1, 0}},matrix{ {-1, -1}, {1, 0}},matrix{{0, -1}, {1, 1}}},{matrix{{0, 1}, {1, 0}},matrix{{0, -1}, {-1, 0}},matrix{{ 1, 0}, {-1, -1}}},{matrix{{0, 1}, {1, 0}},matrix{{-1, -1}, {1, 0}},matrix{{0, -1}, {-1, 0}}}};\n",
+      "metric_matrix = matrix{{2, 1}, {1, 2}};\n",
+      "print(mat_0);\n",
+      "d = numrows (mat_0)_0;\n",
+      "Zpoly = SmPoly(d, mat, metric_matrix, true);\n",
+      "toString Zpoly\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'/tmp/tmp77voqvrx.input:200:22:(3):[6]: error: no method for binary operator - applied to objects:\\n--            d (of class Symbol)\\n--      -     1 (of class ZZ)\\n/tmp/tmp77voqvrx.input:208:16:(3):[5]: --back trace--'"
+       "'                        2        2\\noo1000000018 : Matrix ZZ  <--- ZZ\\n{| 0 1 |, | 1  0  |, | 1  1 |}\\n | 1 0 |  | -1 -1 |  | -1 0 |\\n0 of total 4 - new loop\\n0 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5+3*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n0 of total 4 - loop add \\n1 of total 4 - new loop\\n1 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+3*q_0*q_1^2*q_2^2)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n1 of total 4 - loop add \\n2 of total 4 - new loop\\n2 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+2*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n2 of total 4 - loop add \\n3 of total 4 - new loop\\n3 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-q_0^3*q_1*q_2+2*q_0^2*q_1^2*q_2+q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n3 of total 4 - loop add \\n\\noo1000000022 = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2+q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
       ]
      },
      "execution_count": 1,
