--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1513,11 +1513,10 @@
       "    return Zpoly\n",
       ");\n",
       "\n",
-      "mat = {{matrix{{0, 1}, {1, 0}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, 1}, {1, 0}},matrix{ {-1, -1}, {1, 0}},matrix{{0, -1}, {1, 1}}},{matrix{{0, 1}, {1, 0}},matrix{{0, -1}, {-1, 0}},matrix{{ 1, 0}, {-1, -1}}},{matrix{{0, 1}, {1, 0}},matrix{{-1, -1}, {1, 0}},matrix{{0, -1}, {-1, 0}}}};\n",
+      "mat = {{matrix{{0, -1}, {1, 1}},matrix{{1, 0}, {-1, -1}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {1, 1}} ,matrix{{0, 1}, {1, 0}},matrix{{1, 1}, {-1, 0}}},{matrix{{0, -1}, {1, 1}},matrix{{0, -1}, {-1, 0}},matrix{ {1, 0}, {-1, -1}}},{matrix{{0, -1}, {1, 1}},matrix{{-1, -1}, {1, 0}},matrix{{0, -1}, {-1, 0}}}};\n",
       "metric_matrix = matrix{{2, 1}, {1, 2}};\n",
-      "print(mat_0);\n",
       "d = numrows (mat_0)_0;\n",
-      "Zpoly = SmPoly(d, mat, metric_matrix, true);\n",
+      "Zpoly = SmPoly(d, mat, metric_matrix, false);\n",
       "toString Zpoly\n",
       "\n"
      ]
@@ -1525,7 +1524,7 @@
     {
      "data": {
       "text/plain": [
-       "'                        2        2\\noo1000000018 : Matrix ZZ  <--- ZZ\\n{| 0 1 |, | 1  0  |, | 1  1 |}\\n | 1 0 |  | -1 -1 |  | -1 0 |\\n0 of total 4 - new loop\\n0 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5+3*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n0 of total 4 - loop add \\n1 of total 4 - new loop\\n1 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+3*q_0*q_1^2*q_2^2)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n1 of total 4 - loop add \\n2 of total 4 - new loop\\n2 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+2*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n2 of total 4 - loop add \\n3 of total 4 - new loop\\n3 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-q_0^3*q_1*q_2+2*q_0^2*q_1^2*q_2+q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n3 of total 4 - loop add \\n\\noo1000000022 = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2+q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
+       "'         2        2\\nMatrix ZZ  <--- ZZ\\n\\n(-q_0^3*q_1*q_2+4*q_0^2*q_1^2*q_2-4*q_0*q_1^3*q_2+q_0^3*q_2^2-5*q_0^2*q_1*q_2^2+6*q_0*q_1^2*q_2^2+q_0^2*q_2^3-2*q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
       ]
      },
      "execution_count": 1,
