--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1183,17 +1183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1cd93677-3c82-48fd-9405-1e44add3ef22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'                        2        2\\noo1000000018 : Matrix ZZ  <--- ZZ\\n0 of total 4 - new loop\\n0 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (2*q_0*q_1^4-2*q_1^5-q_0^3*q_1*q_2+q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2+2*q_1^4*q_2+q_0^3*q_2^2-2*q_0^2*q_1*q_2^2+q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n0 of total 4 - loop add \\n1 of total 4 - new loop\\n1 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-q_0^3*q_1*q_2+4*q_0^2*q_1^2*q_2-4*q_0*q_1^3*q_2-2*q_0^2*q_1*q_2^2+4*q_0*q_1^2*q_2^2-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n1 of total 4 - loop add \\n2 of total 4 - new loop\\n2 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+3*q_0*q_1^2*q_2^2)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n2 of total 4 - loop add \\n3 of total 4 - new loop\\n3 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-q_0^3*q_1*q_2+2*q_0^2*q_1^2*q_2+q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n3 of total 4 - loop add \\n\\noo1000000021 = (-2*q_0^3*q_1*q_2+6*q_0^2*q_1^2*q_2-4*q_0*q_1^3*q_2+q_0^3*q_2^2-5*q_0^2*q_1*q_2^2+4*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
+       "'                        2        2\\noo1000000041 : Matrix ZZ  <--- ZZ\\n0 of total 4 - new loop\\n0 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5+3*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n0 of total 4 - loop add \\n1 of total 4 - new loop\\n1 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+3*q_0*q_1^2*q_2^2)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n1 of total 4 - loop add \\n2 of total 4 - new loop\\n2 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+2*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n2 of total 4 - loop add \\n3 of total 4 - new loop\\n3 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-q_0^3*q_1*q_2+2*q_0^2*q_1^2*q_2+q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n3 of total 4 - loop add \\n\\noo1000000044 = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2+q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
