--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1183,17 +1183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "1cd93677-3c82-48fd-9405-1e44add3ef22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'                        2        2\\noo1000000041 : Matrix ZZ  <--- ZZ\\n0 of total 4 - new loop\\n0 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5+3*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n0 of total 4 - loop add \\n1 of total 4 - new loop\\n1 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2-3*q_0^2*q_1*q_2^2+3*q_0*q_1^2*q_2^2)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n1 of total 4 - loop add \\n2 of total 4 - new loop\\n2 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+2*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n2 of total 4 - loop add \\n3 of total 4 - new loop\\n3 of total 4 - loop compute secondMoment\\nl values = {2, -1, 2}\\nnewPolyTriangle = (-q_0^3*q_1*q_2+2*q_0^2*q_1^2*q_2+q_0^3*q_2^2-3*q_0^2*q_1*q_2^2+q_0^2*q_2^3)/(24*q_1^4-48*q_0*q_1^2*q_2+24*q_0^2*q_2^2)\\n3 of total 4 - loop add \\n\\noo1000000044 = (-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2+q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
+       "'(-2*q_0*q_1^4+2*q_1^5-q_0^3*q_1*q_2+5*q_0^2*q_1^2*q_2-2*q_0*q_1^3*q_2-2*q_1^4*q_2+q_0^3*q_2^2-6*q_0^2*q_1*q_2^2+5*q_0*q_1^2*q_2^2+q_0^2*q_2^3-q_0*q_1*q_2^3)/(12*q_1^4-24*q_0*q_1^2*q_2+12*q_0^2*q_2^2)'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,17 +1202,34 @@
     "from VoronoiCellToolBox.orchestration import normalizedChamberSecondMomentPolynomial\n",
     "\n",
     "Q = [[2, -1/2], [-1/2, 2]]\n",
+    "Q = [[2, -1], [-1, 2]]\n",
     "Q = [[2, 1], [1, 2]]\n",
     "normalizedChamberSecondMomentPolynomial(Q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "51f3519a-8650-43f3-b974-16d2196c62bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(-2*q_1^2*q_2^2+2*q_0*q_2^2*q_3+2*q_2^3*q_3+q_2^2*q_3^2-4*q_0*q_1*q_2*q_4-6*q_1^2*q_2*q_4-6*q_1*q_2^2*q_4-4*q_1*q_2*q_3*q_4+q_0^2*q_4^2-2*q_1^2*q_4^2-6*q_1*q_2*q_4^2-2*q_2^2*q_4^2+2*q_0*q_3*q_4^2+2*q_0*q_4^3+2*q_0*q_1^2*q_5+2*q_1^3*q_5-q_0^2*q_3*q_5+2*q_1^2*q_3*q_5+2*q_2^2*q_3*q_5-q_0*q_3^2*q_5-4*q_1*q_2*q_4*q_5+2*q_0*q_4^2*q_5+q_1^2*q_5^2-q_0*q_3*q_5^2)/(12*q_2^2*q_3-24*q_1*q_2*q_4+12*q_0*q_4^2+12*q_1^2*q_5-12*q_0*q_3*q_5)'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from VoronoiCellToolBox.orchestration import normalizedChamberSecondMomentPolynomial\n",
+    "\n",
+    "Q = [[3, -1, -1], [-1, 3, -1], [-1, -1, 3]]\n",
+    "normalizedChamberSecondMomentPolynomial(Q)"
+   ]
   }
  ],
  "metadata": {
