print verbose case

--- a/demo_interfaceM2.ipynb
+++ b/demo_interfaceM2.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "df1b3e99-b00f-4968-9316-d78375f98d18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imported successfully\n"
+     ]
+    }
+   ],
    "source": [
     "import VoronoiCellToolBox.orchestration as orch\n",
     "from VoronoiCellToolBox.orchestration import (\n",
@@ -18,7 +26,8 @@
     "    barycentre_m2,\n",
     "    secondMoment_m2,\n",
     "    VectorizedVertex_m2\n",
-    ")"
+    ")\n",
+    "print(\"Imported successfully\")"
    ]
   },
   {
@@ -33,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1aouiyaxp28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test data initialized successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test data\n",
     "# Simple 2x2 symmetric matrix\n",
@@ -68,10 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "plfieaa6qjo",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1: qnorm_m2\n",
+      "==================================================\n",
+      "Vector v = [1, 2]\n",
+      "Matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Q-norm result: matrix {{6}}\n",
+      "Expected: v^T Q v = 1*2*1 + 2*1*2*(-1) + 2*2*2 = 2 - 4 + 8 = 6\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 1: qnorm_m2\")\n",
     "print(\"=\" * 50)\n",
