new print statements

--- a/demo_interfaceM2.ipynb
+++ b/demo_interfaceM2.ipynb
@@ -21,9 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All functions imported successfully!\n",
+      "Total wrapper functions available: 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/voronoi_cell.py:94: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "import VoronoiCellToolBox.orchestration as orch\n",
     "from VoronoiCellToolBox.orchestration import (\n",
@@ -618,7 +635,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.x",
+   "display_name": "SageMath 10.6",
    "language": "sage",
    "name": "sagemath"
   },
@@ -632,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
