--- a/demo_interfaceM2.ipynb
+++ b/demo_interfaceM2.ipynb
@@ -31,14 +31,6 @@
       "✓ All functions imported successfully!\n",
       "Total wrapper functions available: 15\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/penegas/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/voronoi_cell.py:94: SyntaxWarning: invalid escape sequence '\\g'\n",
-      "  \"\"\"\n"
-     ]
     }
    ],
    "source": [
@@ -86,9 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Test data initialized\n",
+      "  - 2D matrices: Q_2d, Q_2d_alt\n",
+      "  - 3D matrices: Q_3d\n",
+      "  - Test vectors and matrices ready\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple 2x2 symmetric matrices\n",
     "Q_2d = [[2, -1], [-1, 2]]\n",
@@ -129,9 +132,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1: isSame_m2 - Index Comparison\n",
+      "============================================================\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "isSame_m2 requires integer arguments",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Test equal indices\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m result_equal \u001b[38;5;241m=\u001b[39m \u001b[43misSame_m2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mInteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mInteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misSame(1, 1) = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult_equal\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected: 1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py:439\u001b[0m, in \u001b[0;36misSame_m2\u001b[0;34m(i, j)\u001b[0m\n\u001b[1;32m    437\u001b[0m     \u001b[38;5;66;03m# Input validation\u001b[39;00m\n\u001b[1;32m    438\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(i, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(j, \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m--> 439\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misSame_m2 requires integer arguments\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    441\u001b[0m     m2_input_string \u001b[38;5;241m=\u001b[39m load_m2_function_with_dependencies(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misSame\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    443\u001b[0m     code \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m    444\u001b[0m \u001b[38;5;124mresult = isSame(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mj\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m);\u001b[39m\n\u001b[1;32m    445\u001b[0m \u001b[38;5;124mtoString result\u001b[39m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: isSame_m2 requires integer arguments"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 1: isSame_m2 - Index Comparison\")\n",
     "print(\"=\" * 60)\n",
