--- a/demo_interfaceM2.ipynb
+++ b/demo_interfaceM2.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -132,27 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isinstance(1, Integer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -161,19 +141,16 @@
      "text": [
       "Test 1: isSame_m2 - Index Comparison\n",
       "============================================================\n",
+      "\n",
+      "isSame(1, 1) = 1\n",
+      "Expected: 1\n",
+      "\n",
+      "isSame(1, 2) = 0\n",
+      "Expected: 0\n",
+      "\n",
+      "isSame(5, 5) = 1\n",
+      "Expected: 1\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "isSame_m2 requires integer arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Test equal indices\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m result_equal \u001b[38;5;241m=\u001b[39m \u001b[43misSame_m2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mInteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mInteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misSame(1, 1) = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult_equal\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected: 1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py:439\u001b[0m, in \u001b[0;36misSame_m2\u001b[0;34m(i, j)\u001b[0m\n\u001b[1;32m    437\u001b[0m     \u001b[38;5;66;03m# Input validation\u001b[39;00m\n\u001b[1;32m    438\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(i, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(j, \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m--> 439\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misSame_m2 requires integer arguments\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    441\u001b[0m     m2_input_string \u001b[38;5;241m=\u001b[39m load_m2_function_with_dependencies(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124misSame\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    443\u001b[0m     code \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m    444\u001b[0m \u001b[38;5;124mresult = isSame(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mj\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m);\u001b[39m\n\u001b[1;32m    445\u001b[0m \u001b[38;5;124mtoString result\u001b[39m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n",
-      "\u001b[0;31mTypeError\u001b[0m: isSame_m2 requires integer arguments"
      ]
     }
    ],
@@ -212,9 +189,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 2: favouriteMatrix_m2 - Special Matrix Construction\n",
+      "============================================================\n",
+      "\n",
+      "favouriteMatrix(2):\n",
+      "matrix {{2, -1}, {-1, 2}}\n",
+      "Expected: matrix {{2, -1}, {-1, 2}}\n",
+      "\n",
+      "favouriteMatrix(3):\n",
+      "matrix {{3, -1, -1}, {-1, 3, -1}, {-1, -1, 3}}\n",
+      "Expected: matrix {{3, -1, -1}, {-1, 3, -1}, {-1, -1, 3}}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 2: favouriteMatrix_m2 - Special Matrix Construction\")\n",
     "print(\"=\" * 60)\n",
@@ -224,14 +219,14 @@
     "fav_2d = favouriteMatrix_m2(2)\n",
     "print(f\"favouriteMatrix(2):\")\n",
     "print(fav_2d)\n",
-    "print(f\"Expected: matrix {{{{2,-1}},{{-1,2}}}}\")\n",
+    "print(f\"Expected: matrix {{{{2, -1}}, {{-1, 2}}}}\")\n",
     "print()\n",
     "\n",
     "# 3D case\n",
     "fav_3d = favouriteMatrix_m2(3)\n",
     "print(f\"favouriteMatrix(3):\")\n",
     "print(fav_3d)\n",
-    "print(f\"Expected: matrix {{{{3,-1,-1}},{{-1,3,-1}},{{-1,-1,3}}}}\")\n",
+    "print(f\"Expected: matrix {{{{3, -1, -1}}, {{-1, 3, -1}}, {{-1, -1, 3}}}}\")\n",
     "print()"
    ]
   },
@@ -248,9 +243,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 3: qnorm_m2 - Quadratic Form\n",
+      "============================================================\n",
+      "Vector v = [1, 2]\n",
+      "Matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Q-norm result: matrix {{6}}\n",
+      "\n",
+      "Manual calculation:\n",
+      "  v^T Q v = [1 2] * {2 -1; -1 2} * [1; 2]\n",
+      "  = [1*2 + 2*(-1), 1*(-1) + 2*2] * [1; 2]\n",
+      "  = [0, 3] * [1; 2]\n",
+      "  = 0*1 + 3*2 = 6\n",
+      "\n",
+      "Q-norm result: matrix {{6}}\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 3: qnorm_m2 - Quadratic Form\")\n",
     "print(\"=\" * 60)\n",
@@ -265,7 +281,9 @@
     "print(f\"  = [1*2 + 2*(-1), 1*(-1) + 2*2] * [1; 2]\")\n",
     "print(f\"  = [0, 3] * [1; 2]\")\n",
     "print(f\"  = 0*1 + 3*2 = 6\")\n",
-    "print()"
+    "print()\n",
+    "result = qnorm_m2([1, -1], Q_2d)\n",
+    "print(f\"Q-norm result: {result}\")"
    ]
   },
   {
@@ -279,9 +297,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 4: qNormMatrixFormat_m2 - Column Q-norms\n",
+      "============================================================\n",
+      "Matrix B (columns): [[1, 0], [0, 1]]\n",
+      "Matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Q-norms for each column: matrix {{2}, {2}}\n",
+      "\n",
+      "Expected:\n",
+      "  Column 1: [1,0]^T Q [1,0] = 1*2*1 + 0 = 2\n",
+      "  Column 2: [0,1]^T Q [0,1] = 0 + 1*2*1 = 2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 4: qNormMatrixFormat_m2 - Column Q-norms\")\n",
     "print(\"=\" * 60)\n",
@@ -310,9 +346,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 5: listOf1Minors_m2 - Cofactor Matrix\n",
+      "============================================================\n",
+      "Matrix A = [[2, 1], [1, 2]]\n",
+      "\n",
+      "1-minors (cofactors): {{2, 1}, {1, 2}}\n",
+      "\n",
+      "Explanation:\n",
+      "  Cofactor(0,0) = det([{2}]) = 2\n",
+      "  Cofactor(0,1) = -det([{1}]) = -1\n",
+      "  Cofactor(1,0) = -det([{1}]) = -1\n",
+      "  Cofactor(1,1) = det([{2}]) = 2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 5: listOf1Minors_m2 - Cofactor Matrix\")\n",
     "print(\"=\" * 60)\n",
@@ -341,9 +396,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 6: inverseCofactorMatrix_m2 - Matrix Inverse\n",
+      "============================================================\n",
+      "Matrix A = [[2, 1], [1, 2]]\n",
+      "\n",
+      "A^(-1) via cofactors: matrix {{2/3, -1/3}, {-1/3, 2/3}}\n",
+      "\n",
+      "Manual calculation:\n",
+      "  det(A) = 2*2 - 1*1 = 3\n",
+      "  Adjugate = [[2, -1], [-1, 2]]\n",
+      "  A^(-1) = (1/3) * Adjugate = [[2/3, -1/3], [-1/3, 2/3]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 6: inverseCofactorMatrix_m2 - Matrix Inverse\")\n",
     "print(\"=\" * 60)\n",
@@ -372,9 +445,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 7: symMatricesRing_m2 - Symmetric Matrix Ring\n",
+      "============================================================\n",
+      "\n",
+      "Symmetric 2x2 Matrix Ring:\n",
+      "result\n",
+      "Expected: QQ[x_(1,1), x_(1,2), x_(2,2)]/(x_(1,2)-x_(2,1))\n",
+      "\n",
+      "Symmetric 3x3 Matrix Ring:\n",
+      "result\n",
+      "Expected: QQ[x_(1,1), ...] with symmetry relations\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 7: symMatricesRing_m2 - Symmetric Matrix Ring\")\n",
     "print(\"=\" * 60)\n",
@@ -406,9 +497,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 8: Listify_m2 - Matrix Encoding\n",
+      "============================================================\n",
+      "Matrix to encode: [[2, 1], [1, 3]]\n",
+      "\n",
+      "Encoded as list: {2, 1, 3}\n",
+      "\n",
+      "Explanation:\n",
+      "  Diagonal elements: 2, 3\n",
+      "  Off-diagonal: 1\n",
+      "  Order: diagonal first, then off-diagonals\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 8: Listify_m2 - Matrix Encoding\")\n",
     "print(\"=\" * 60)\n",
@@ -436,9 +545,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 9: makepos_m2 - Polynomial Sign Adjustment\n",
+      "============================================================\n",
+      "\n",
+      "Polynomial: q_0 + q_1\n",
+      "Substitution values: [2, 3]\n",
+      "Evaluation: 2 + 3 = 5 (positive)\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "d must be an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEvaluation: 2 + 3 = 5 (positive)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m---> 15\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mmakepos_m2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpolynom\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlvals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mInteger\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mring\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResult after makepos: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected: q_0 + q_1 (unchanged since already positive)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/projects/research/VoronoiCellToolBox/VoronoiCellToolBox/orchestration.py:539\u001b[0m, in \u001b[0;36mmakepos_m2\u001b[0;34m(polynom_str, lvalues, d, ring_str)\u001b[0m\n\u001b[1;32m    537\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlvalues must be a list or tuple\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    538\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(d, \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m--> 539\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124md must be an integer\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    541\u001b[0m m2_input_string \u001b[38;5;241m=\u001b[39m load_m2_function_with_dependencies(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmakepos\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    543\u001b[0m \u001b[38;5;66;03m# Convert lvalues list to Macaulay2 format\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: d must be an integer"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 9: makepos_m2 - Polynomial Sign Adjustment\")\n",
     "print(\"=\" * 60)\n",
@@ -473,9 +608,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 10: fromRelevantVectorsToVertex_m2 - Voronoi Vertex\n",
+      "============================================================\n",
+      "Relevant vectors B = [[1, 0], [0, 1]]\n",
+      "Metric matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Vertex coordinates: matrix {{1}, {1}}\n",
+      "\n",
+      "Formula: (1/2) * Q^(-1) * B^(-T) * ||b_i||_Q^2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 10: fromRelevantVectorsToVertex_m2 - Voronoi Vertex\")\n",
     "print(\"=\" * 60)\n",
@@ -500,9 +651,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 11: barycentre_m2 - Barycenter of Vectors\n",
+      "============================================================\n",
+      "Simplex vertices (columns): [[0, 1, 0], [0, 0, 1]]\n",
+      "\n",
+      "Barycenter: matrix {{1/3}, {1/3}}\n",
+      "\n",
+      "Manual calculation:\n",
+      "  Average of row 1: (0 + 1 + 0) / 3 = 1/3\n",
+      "  Average of row 2: (0 + 0 + 1) / 3 = 1/3\n",
+      "  Result: [[1/3], [1/3]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 11: barycentre_m2 - Barycenter of Vectors\")\n",
     "print(\"=\" * 60)\n",
@@ -529,9 +698,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 12: secondMoment_m2 - Second Moment\n",
+      "============================================================\n",
+      "Triangle vertices (columns): [[0, 1, 0], [0, 0, 1]]\n",
+      "Metric matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Second moment: /tmp/tmprf3x1_j_.input:57:10:(3):[4]: --back trace--\n",
+      "\n",
+      "This is a rational function depending on Q entries.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 12: secondMoment_m2 - Second Moment\")\n",
     "print(\"=\" * 60)\n",
@@ -556,9 +741,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 13: VectorizedVertex_m2 - Concatenate Vertices\n",
+      "============================================================\n",
+      "List of relevant vector matrices: [[[1, 0], [0, 1]], [[0, 1], [1, 0]]]\n",
+      "Metric matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Concatenated vertices: /tmp/tmprf3x1_j_.input:125:10:(3):[4]: --back trace--\n",
+      "\n",
+      "Result contains columns, each being a vertex.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 13: VectorizedVertex_m2 - Concatenate Vertices\")\n",
     "print(\"=\" * 60)\n",
@@ -589,9 +790,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 14: normalizedChamberSecondMomentPolynomial - Full Voronoi Cell\n",
+      "============================================================\n",
+      "Metric matrix Q = [[2, -1], [-1, 2]]\n",
+      "\n",
+      "Computing full second moment polynomial...\n",
+      "(This may take a moment as it computes the Voronoi cell triangulation)\n",
+      "\n",
+      "Second moment polynomial: (2*q_0*q_1^2+2*q_1^3-q_0^2*q_2+2*q_1^2*q_2-q_0*q_2^2)/(12*q_1^2-12*q_0*q_2)\n",
+      "\n",
+      "This polynomial is valid for all symmetric matrices in the same\n",
+      "secondary cone as Q. The variables q_0, q_1, q_2 correspond to\n",
+      "the entries of a symmetric 2x2 matrix.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test 14: normalizedChamberSecondMomentPolynomial - Full Voronoi Cell\")\n",
     "print(\"=\" * 60)\n",
